After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697881 - info: Fix display of graphic driver name.
info: Fix display of graphic driver name.
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-12 14:32 UTC by darkxst
Modified: 2013-04-15 08:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
info: Fix display of graphic driver name. (2.34 KB, patch)
2013-04-12 14:32 UTC, darkxst
committed Details | Review

Description darkxst 2013-04-12 14:32:03 UTC
Use XCreateWindow to ensure we are using the same X VisualInfo on
both the config and window. This avoids a BadMatch error on nvidia
glx implementation, that cause this to fail.

XCreateSimpleWindow appears to make a copy of the X Visual that has a different
visualID. This mismatch in VisualID's causes glXCreateWindow to fail with a BadMatch
error.
Comment 1 darkxst 2013-04-12 14:32:05 UTC
Created attachment 241357 [details] [review]
info: Fix display of graphic driver name.

Use XCreateWindow to ensure we are using the same X VisualInfo on
both the config and window. This avoids a BadMatch error on nvidia
glx implementation.
Comment 2 Bastien Nocera 2013-04-15 08:23:19 UTC
Review of attachment 241357 [details] [review]:

Looks good. Please commit to gnome-3-8 and master.
Comment 3 darkxst 2013-04-15 08:36:50 UTC
Attachment 241357 [details] pushed as bdfcbe1 - info: Fix display of graphic driver name.