info: Fix display of graphic driver name.

Use XCreateWindow to ensure we are using the same X VisualInfo on
both the config and window. This avoids a BadMatch error on nvidia
glx implementation.

https://bugzilla.gnome.org/show_bug.cgi?id=697881